--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
-    <string name="app_name">Lab 4 Notes</string>
+	<string name="app_name">Lab 4 Notes</string>
+	<string name="username">Username</string>
+	<string name="username_required">Username is required</string>
+	<string name="password">Password</string>
+	<string name="password_required">Password is required</string>
+	<string name="sign_in">Sign in</string>
+	<string name="sign_up">Sign up</string>
+	<string name="skip">Skip</string>
 </resources>
