--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
 	<string name="sign_in">Sign in</string>
 	<string name="sign_up">Sign up</string>
 	<string name="skip">Skip</string>
+	<string name="guest">Guest</string>
 </resources>
